[metadata]
name = pyedasc
version = 0.0.1
author = MS44neuro
author_email = m.ghenghea@yahoo.com
description = Pyedasc is a collection of modules for analyzing different types of data from patch-clamp experiments. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MS44neuro/pyedasc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True